Fixed text-wrap and title margins

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,3 @@
-/* nothing here yet*/
+.search-button{
+    margin-left: 1em;
+}
